uploaded new browser icon and fixed back to top font size (too big)

--- a/src/app/common/back-to-top/back-to-top.component.scss
+++ b/src/app/common/back-to-top/back-to-top.component.scss
@@ -1,3 +1,3 @@
 a {
-    font-size: 2rem;
+    font-size: 1rem;
 }
